# dircmp

./: CMakeLists.txt  auxullary.h  db_wrapper.cpp  db_wrapper.h  file_h.h  fs_comparator.cpp  fs_comparator.h  fs_view.cpp  fs_view.h  hashf.h  main.cpp  pbar.cpp  pbar.h
